--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,7 +1,7 @@
 chatGPTAccountPool:
-  - email: email
-    password: password
-    session_token: session_token
+  - email: vyez86@geforce.icu
+    password: sklf2421708
+    session_token: s%3AVKc4n4xrf_v9xlWQaFJyer_yLMp5y-ny.RTzwyO%2B
 chatPrivateTiggerKeyword: ""
 openAIProxy: ""
 clearanceToken: ""
